samples/_failures_safe/1761664218_3c6d65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_028a9fe2.c: In function ‘main’:
./samples/SAFE/__tmp_028a9fe2.c:125:12: error: missing terminating " character
  125 |     printf("\nMatrix
      |            ^~~~~~~~~
./samples/SAFE/__tmp_028a9fe2.c:125:5: error: expected expression at end of input
  125 |     printf("\nMatrix
      |     ^~~~~~
./samples/SAFE/__tmp_028a9fe2.c:125:5: error: expected declaration or statement at end of input
